LEKCJA 6: Tworzenie Widoków

--- a/MyTasks/Views/Task/Tasks.cshtml
+++ b/MyTasks/Views/Task/Tasks.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model MyTasks.Core.ViewModels.TasksViewModel
 
 @{
     ViewData["Title"] = "Tasks";
@@ -6,33 +6,117 @@
 
 <h1 class="mb-3">Moje Zadania</h1>
 
-<form>
+<form id="filterForm">
     <div class="form-row align-items-center">
         <div class="col-auto">
-            <label class="sr-only" for="inlineFormInput">Name</label>
-            <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="Jane Doe">
+            @Html.TextBoxFor(
+           x => x.FilterTasks.Title,
+           new { @class = "form-control mb-2", placeholder = "Tytuł" })
         </div>
         <div class="col-auto">
-            <label class="sr-only" for="inlineFormInputGroup">Username</label>
-            <div class="input-group mb-2">
-                <div class="input-group-prepend">
-                    <div class="input-group-text">@</div>
-                </div>
-                <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Username">
-            </div>
+            @Html.DropDownListFor(
+           x => x.FilterTasks.CategoryId,
+           new SelectList(Model.Categories, "Id", "Name"),
+           "-- wybierz kategorię --",
+           new { @class = "form-control mb-2" })
         </div>
         <div class="col-auto">
             <div class="form-check mb-2">
-                <input class="form-check-input" type="checkbox" id="autoSizingCheck">
-                <label class="form-check-label" for="autoSizingCheck">
-                    Remember me
-                </label>
+                @Html.CheckBoxFor(
+               x => x.FilterTasks.IsExecuted,
+               new { @class = "form-check-label" })
+                @Html.LabelFor(
+               x => x.FilterTasks.IsExecuted)
             </div>
         </div>
         <div class="col-auto">
-            <button type="submit" class="btn btn-primary mb-2">Submit</button>
+            <button type="submit" class="btn btn-primary mb-2">Szukaj</button>
         </div>
     </div>
 </form>
 
-@* tabela z zadaniami *@
+<div>
+    await @Html.PartialAsync("_TasksTable.cshtml", Model.Tasks)
+</div>
+
+@section Scripts
+{
+    <script type="text/javascript">
+
+        $(document).ready(function () {
+            $('#filterForm').submit(function () {
+                $.ajax({
+                    type: "POST",
+                    url: "@Url.Action("Tasks", "Task")",
+                    data: $(this).serialize(),
+                    success: function (data) {
+                        $('#tasksTable').html(data);
+                    },
+                    error: function (data) {
+                        alert(data.message)
+                    },
+                    dataType: "html"
+                });
+
+                return false;
+            });
+        });
+
+        function deleteTask(id, btn) {
+
+            if (!confirm("Czy na pewno chcesz usunąć zadanie?"))
+                return;
+
+            $.ajax({
+                type: "POST",
+                url: "@Url.Action("Delete", "Task")",
+                data: {
+                    id: id
+                },
+                success: function (data) {
+                    if (data.success) {
+                        var row = btn.parentNode.parentNode;
+                        row.parentNode.removeChild(row);
+                    }
+                    else
+                    {
+                        alert(data.message);
+                    }
+                },
+                error: function (data) {
+                    alert(data.message)
+                },
+                dataType: "json"
+            });
+        }
+
+        function finishTask(id, btn) {
+
+            if (!confirm("Czy na pewno chcesz oznaczyć zadanie jako zrealizowane?"))
+                return;
+
+            $.ajax({
+                type: "POST",
+                url: "@Url.Action("Finish", "Task")",
+                data: {
+                    id: id
+                },
+                success: function (data) {
+                    if (data.success) {
+                        var row = btn.parentNode.parentNode;
+                        row.parentNode.removeChild(row);
+                    }
+                    else
+                    {
+                        alert(data.message);
+                    }
+                },
+                error: function (data) {
+                    alert(data.message)
+                },
+                dataType: "json"
+            });
+        }
+
+    </script>
+}
