LEKCJA 7: Tworzenie Kontrolerów

--- a/MyTasks/Views/Task/_TasksTable.cshtml
+++ b/MyTasks/Views/Task/_TasksTable.cshtml
@@ -18,7 +18,8 @@
                 {
                     <tr>
                         <td>
-                            <a href="@Url.Action("Task","Task", new { id = task.Id })"
+                            <a href="@Url.Action("Task","Task",
+                                    new { id = task.Id })"
                                class="font-weight-bold">
                                 @task.Title
                             </a>
