--- a/MyTasks/Views/Task/_TasksTable.cshtml
+++ b/MyTasks/Views/Task/_TasksTable.cshtml
@@ -38,7 +38,7 @@
 
                             <button class="btn btn-danger btn-sm"
                                     onclick="deleteTask('@task.Id', this)">
-                                Zrealizuj
+                                Usuń
                             </button>
                         </td>
                     </tr>
