--- a/MyTasks/Views/Task/Task.cshtml
+++ b/MyTasks/Views/Task/Task.cshtml
@@ -72,7 +72,7 @@
 
     <script type="text/javascript">
 
-        $(document).ready(function {
+        $(document).ready(function () {
             $('#Term').datepicker({
                 format: "dd-mm-yyyy",
                 language: "pl",
