--- a/MyTasks/Views/Task/Categories.cshtml
+++ b/MyTasks/Views/Task/Categories.cshtml
@@ -5,7 +5,7 @@
         <h1>Kategorie</h1>
     </div>
     <div>
-        <a href='@Url.Action("AddCategory", "Task")' class="btn btn-primary ml-2 mt-2">
+        <a href='@Url.Action("Category", "Task")' class="btn btn-primary ml-2 mt-2">
             Dodaj nową kategorię
         </a>
     </div>
@@ -28,7 +28,13 @@
                         continue;
 
                     <tr>
-                        <td>@category.Name</td>
+                        <td>
+                            <a href="@Url.Action("Category","Task",
+                                    new { id = category.Id })"
+                               class="font-weight-bold">
+                                @category.Name
+                            </a>
+                        </td>
                         <td>
                             <button class="btn btn-danger btn-sm"
                                     onclick="deleteCategory('@category.Id', this)">
