Drobne poprawki kosmetyczne

--- a/MyTasks/Views/Shared/_Layout.cshtml
+++ b/MyTasks/Views/Shared/_Layout.cshtml
@@ -1,9 +1,9 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - MyTasks</title>
+    <title>@ViewData["Title"] - Moje Zadania</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link href="~/lib/bootstrap-datepicker/bootstrap-datepicker.css" rel="stylesheet" />
     <link href="~/lib/bootstrap-datepicker/bootstrap-datepicker3.css" rel="stylesheet" />
@@ -27,9 +27,6 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Task" asp-action="Categories">Kategorie</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
                     </ul>
                 </div>
             </div>
@@ -43,7 +40,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - Moje Zadania - <a asp-area="" asp-controller="Home" asp-action="Privacy">Polityka Prywatności</a>
+            &copy; 2023 - Moje Zadania
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
